<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="in.bigo.lovegame.SettingsActivity">

    <TextView
        android:id="@+id/toggle_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:text="@string/music"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />


    <com.gc.materialdesign.views.Switch
        android:id="@+id/music_switch"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_toRightOf="@+id/toggle_notification"
        android:gravity="right"
        />





    <LinearLayout
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/toggle_notification"
        android:layout_marginTop="5dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal"></LinearLayout>




    <TextView
        android:id="@+id/musicvolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/divider_1"
        android:text="@string/volume"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />





    <com.gc.materialdesign.views.Slider
        android:id="@+id/volumeslider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicvolume"
        android:background="#1E88E5"
        materialdesign:max="100"
        materialdesign:min="0"
        materialdesign:showNumberIndicator="true"/>


    <LinearLayout
        android:id="@+id/divider_0"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/volumeslider"
        android:layout_marginTop="5dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal"></LinearLayout>




    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_0"
        android:padding="10dp"
        android:text="@string/version"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/version"
        android:layout_marginTop="5dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal"></LinearLayout>


    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_2"
        android:padding="10dp"
        android:text="@string/share"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/share"
        android:layout_marginTop="5dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_3"
        android:padding="10dp"
        android:text="@string/feedback"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/divider_4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/feedback"
        android:layout_marginTop="5dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal"></LinearLayout>


    <TextView
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_4"
        android:padding="10dp"
        android:text="@string/on_web"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/divider_5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/web"
        android:layout_marginTop="5dp"
        android:background="@color/black_overlay"
        android:orientation="horizontal"></LinearLayout>


</RelativeLayout>
